--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -4,10 +4,5 @@ body {
   align-items: center; /* Center content vertically */
   height: 100vh; /* Make the body fill the viewport height */
   margin: 0; /* Remove default margin from the body */
-  background-color: #f0f0f0; /* Optional: Add background color */
-}
-
-h1 {
-  color: hsla(0, 0%, 0%, 0.75);
-  margin-left: 25px;
+  background-color: #212121; /* Optional: Add background color */
 }
